grammar.js
    source_file: ($) => repeat($.statement),

    // comments

    identifier: (_) => identifier_rgx,

    supremum: (_) => token(choice("#sup", "#supremum")),

    number: (_) =>
      token(
        choice(
          choice("0", /([1-9][0-9]*)/),
          token(seq("0x", /([0-9A-Fa-f]+)/)),
          token(seq("0o", /([1-7]+)/)),
          token(seq("0b", /([0-1]+)/)),
        ),
      ),

    variable: (_) => variable_rgx,

    abs: ($) => seq("|", $.term, repeat(seq(";", $.term)), "|"),

    terms: ($) => seq($.term, repeat(seq(",", $.term))),

    _arg_pool: ($) =>
      seq(
        "(",
        choice(
          field("arguments", optional(alias($._terms_or_projection, $.terms))),
          $._arg_pool_n,
        ),
        ")",
      ),

    function: ($) => seq(field("name", $.identifier), optional($._arg_pool)),

    theory_operator: (_) =>
      token(
        choice(
          // the general pattern would be [/!<=>+\-*\\?&@|:;~\^\.]+,
          // but we have to exclude the four operators . : ; :-
          /[/!<=>+\-*\\?&@|~\^]/,
          /[/!<=>+\-*\\?&@|;~\^\.][/!<=>+\-*\\?&@|:;~\^\.]+/,
          /:[/!<=>+*\\?&@|:;~\^\.]/,
          /:[/!<=>+\-*\\?&@|:;~\^\.]{2,}/,
        ),
      ),

    _theory_operator: ($) =>
      choice($.theory_operator, alias($.default_negation, $.theory_operator)),

    boolean_constant: (_) => token(choice("#true", "#false")),

    symbolic_atom: ($) => seq($.atom_identifier, optional($._arg_pool)),

    relation: (_) => token(choice(">", "<", ">=", "<=", "=", "!=")),

    comparison: ($) =>
      seq($.term, $.relation, $.term, repeat(seq($.relation, $.term))),

    default_negation: (_) => "not",
    literal: ($) =>
      seq(
        optional(field("sign", $.literal_sign)),
        field("atom", $.simple_atom),
      ),

    // aggregates

    condition: ($) => seq($.literal, repeat(seq(",", $.literal))),

    _condition: ($) =>
      seq(alias($.colon, ":"), optional(field("condition", $.condition))),

    aggregate_function: (_) =>
      token(choice("#sum", "#sum+", "#min", "#max", "#count")),

    upper: ($) => seq(optional($.relation), $.term),
    lower: ($) => seq($.term, optional($.relation)),

    set_aggregate_element: ($) =>
      seq(field("literal", $.literal), optional($._condition)),

    set_aggregate_elements: ($) =>
      seq($.set_aggregate_element, repeat(seq(";", $.set_aggregate_element))),

    set_aggregate: ($) =>
      seq(
        optional(field("left", $.lower)),
        "{",
        optional(field("elements", $.set_aggregate_elements)),
        "}",
        optional(field("right", $.upper)),
      ),

    // theory atoms

    theory_atom_upper: ($) => seq($._theory_operator, $.theory_term),

    theory_atom: ($) =>
      seq(
        "&",
        field("name", $.identifier),
        optional(field("arguments", $._arg_pool)),
        seq("{", optional(field("elements", $.theory_elements)), "}"),
        optional(field("right", $.theory_atom_upper)),
      ),

    // body literals

    head_aggregate_element: ($) =>
      seq(
        optional(field("terms", $.terms)),
        alias($.colon, ":"),
        field("literal", $.literal),
        optional($._condition),
      ),

    head_aggregate_elements: ($) =>
      seq($.head_aggregate_element, repeat(seq(";", $.head_aggregate_element))),

    head_aggregate: ($) =>
      seq(
        optional(field("left", $.lower)),
        field("function", $.aggregate_function),
        "{",
        optional(field("elements", $.head_aggregate_elements)),
        "}",
        optional(field("right", $.upper)),
      ),

    _conditional_literal_n: ($) =>
      seq(
        field("literal", $.literal),
        alias($.colon, ":"),
        field("condition", $.condition),
      ),

    _conditional_literal_0: ($) =>
      seq(field("literal", $.literal), alias($.colon, ":")),

    conditional_literal: ($) =>
      choice($._conditional_literal_n, $._conditional_literal_0),

    _disjunction_element_sep: ($) =>
      choice(
        seq($.literal, choice(",", ";", "|")),
        seq(
          alias($._conditional_literal_n, $.conditional_literal),
          choice(";", "|"),
        ),
        seq(alias($._conditional_literal_0, $.conditional_literal), ";"),
      ),

    disjunction: ($) =>
      choice(
        seq(
          repeat1($._disjunction_element_sep),
          choice($.literal, $.conditional_literal),
        ),
        $.conditional_literal,
      ),

    rule: ($) =>
      seq(
        field("head", $.head),
        optional(seq(":-", field("body", $.body))),
        ".",
      ),

    _metasp_identifier: ($) => seq("&", $.identifier),

    metasp_symbolic_atom: ($) =>
      seq(
        $.metasp_atom_identifier,
        optional(field("arguments", $._arg_pool)),
      ),

    metasp_function: ($) =>
      seq(field("name", $._metasp_identifier), optional($._arg_pool)),
